--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@supabase/supabase-js": "^1.1.2",
     "vue": "^3.0.4"
   },
